docs [controllers]: products endpoints documentation done
